--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
                                 
                                 <div class="hero__hero-figure">
                                     <figure class="hero__one">
-                                        <img src="https://im.wampi.ru/2023/02/15/nat-1.jpg" alt="Scenery" class="hero__image_one"/>
+                                        <img src="https://thumb.cloud.mail.ru/thumb/xw1/%D0%90%D0%BB%D1%8C%D0%B1%D0%BE%D0%BC%D1%8B/svetlana-gumerova-MK-b0PE3Dx4-unsplash%201.jpg" alt="Scenery" class="hero__image_one"/>
                                     </figure>
 
                                     <figure class="hero__first">
